Temporarily attempt to fix alignment of search icon

--- a/src/components/NavDrawer/NavDrawer.module.scss
+++ b/src/components/NavDrawer/NavDrawer.module.scss
@@ -80,8 +80,6 @@
 		.icon {
 			color: white;
 			width: 30px;
-			height: fit-content;
-			align-self: flex-start;
 		}
 		.icon:hover {
 			cursor: pointer;
